# satellite_instrument_sim

./: .gitignore  CMakeLists.txt  Dockerfile.proc  Dockerfile.sim  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ICD-001.md  SRS-001.md
include/: AtmosphericModel.h  AtmosphericSimulator.h  SpscQueue.h  TelemetryFrame.h  TelemetryPipe.h
processor/: frame_ingestor.py  insight_publisher.py  main.py  signal_processor.py
scripts/: setup.sh
src/: AtmosphericModel.cpp  AtmosphericSimulator.cpp  TelemetryFrame.cpp  TelemetryPipe.cpp  main.cpp
tests/: CMakeLists.txt  test_atmospheric.cpp  test_frame.cpp  test_simulator.cpp
tests_python/: conftest.py  test_api.py  test_ingestor.py  test_processor.py
