[project]
name = "satellite-instrument-sim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "scipy>=1.12",
    "numpy>=1.26",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["processor"]

[tool.pytest.ini_options]
testpaths = ["tests_python"]
asyncio_mode = "auto"
